@@ -280,6 +280,7 @@ protected:
     static int       FindNotExcludedNodeUp(QListWidget *listWidget, int candidate);
     static bool      FirstPointEqualLast(QListWidget *listWidget, const VContainer *data);
     static bool      DoublePoints(QListWidget *listWidget, const VContainer *data);
+    static bool      DoubleCurves(QListWidget *listWidget, const VContainer *data);
     static bool      EachPointLabelIsUnique(QListWidget *listWidget);
     static QString   DialogWarningIcon();
     static QFont     NodeFont(QFont font, bool nodeExcluded = false);
