@@ -2420,6 +2420,12 @@ bool DialogSeamAllowance::MainPathIsValid() const
             uiTabPaths->helpLabel->setText(url);
             valid = false;
         }
+        else if (DoubleCurves(uiTabPaths->listWidgetMainPath, data))
+        {
+            url += tr("The same curve repeats twice!");
+            uiTabPaths->helpLabel->setText(url);
+            valid = false;
+        }
         else if (not EachPointLabelIsUnique(uiTabPaths->listWidgetMainPath))
         {
             url += tr("Each point in the path must be unique!");
