@@ -1,6 +1,7 @@
 # Version 0.7.0 (unreleased)
 - [#892] Show tooltip for piece node point.
 - [#894] Quick way to disable a passmark.
+- [#895] Improve path validation. Do not allow repeat the same curve twice.
 
 # Version 0.6.1 (unreleased)
 - [#885] Regression. Broken support for multi size measurements.
